Clean up TypeObjectCreator a bit
We have a split formatting string: use String.formatted() and remove the
concatenation.

Change-Id: I3bf41e3e4ceebde9ba47d356a6ad00a13e4481bc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>